--- a/test/debug.html
+++ b/test/debug.html
@@ -4,6 +4,11 @@
         <script type="module" src="/test/debug.js"></script>
     </head>
     <body>
-        <quantum-tabs></quantum-tabs>
+        <quantum-tabs>
+            <button name="tab 1" slot="tab">tab 1 label</button>
+            <button name="tab 2" slot="tab">tab 2 label</button>
+            <div name="tab 1" slot="panel" active>tab 1 content</div>
+            <div name="tab 2" slot="panel">tab 2 content</div>
+        </quantum-tabs>
     </body>
 </html>
