--- a/test/debug.html
+++ b/test/debug.html
@@ -5,20 +5,14 @@
     </head>
     <body>
         <quantum-tabs>
-            <button name="tab 1" slot="tab">tab 1 label</button>
-            <button name="tab 2" slot="tab">tab 2 label</button>
-            <button name="tab 3" slot="tab">tab 3 label</button>
-            <div name="tab 1" slot="panel" active>tab 1 content</div>
-            <div name="tab 2" slot="panel">tab 2 content</div>
-            <div name="tab 3 slot=" panel">tab 3 content</div>
+            <button id="tab1" slot="tab">tab 1 label</button>
+            <button id="tab2" slot="tab">tab 2 label</button>
+            <div id="tab1" slot="content" active>tab 1 content</div>
+            <div id="tab2" slot="content">tab 2 content</div>
         </quantum-tabs>
         <quantum-tabs>
-            <button name="tab 1" slot="tab">tab 1 label</button>
-            <button name="tab 2" slot="tab">tab 2 label</button>
-            <button name="tab 3" slot="tab">tab 3 label</button>
-            <div name="tab 1" slot="panel" active>tab 1 content</div>
-            <div name="tab 2" slot="panel">tab 2 content</div>
-            <div name="tab 3 slot=" panel">tab 3 content</div>
+            <button id="tab3" slot="tab">tab 3 label</button>
+            <div id="tab3" slot="content" active>tab 3 content</div>
         </quantum-tabs>
     </body>
 </html>
