fixed some bugs with drag drop

--- a/test/debug.html
+++ b/test/debug.html
@@ -4,15 +4,15 @@
         <script type="module" src="/test/debug.js"></script>
     </head>
     <body>
-        <quantum-tabs>
+        <quantum-tabs active="tab1">
             <button id="tab1" slot="tab">tab 1 label</button>
             <button id="tab2" slot="tab">tab 2 label</button>
-            <div id="tab1" slot="content" active>tab 1 content</div>
+            <div id="tab1" slot="content">tab 1 content</div>
             <div id="tab2" slot="content">tab 2 content</div>
         </quantum-tabs>
-        <quantum-tabs>
+        <quantum-tabs active="tab3">
             <button id="tab3" slot="tab">tab 3 label</button>
-            <div id="tab3" slot="content" active>tab 3 content</div>
+            <div id="tab3" slot="content">tab 3 content</div>
         </quantum-tabs>
     </body>
 </html>
