update dragdrop sample

--- a/test/debug.html
+++ b/test/debug.html
@@ -5,13 +5,13 @@
     </head>
     <body>
         <quantum-tabs active="tab1">
-            <button id="tab1" slot="tab">tab 1 label</button>
-            <button id="tab2" slot="tab">tab 2 label</button>
+            <button content="tab1" slot="tab">tab 1 label</button>
+            <button content="tab2" slot="tab">tab 2 label</button>
             <div id="tab1" slot="content">tab 1 content</div>
             <div id="tab2" slot="content">tab 2 content</div>
         </quantum-tabs>
         <quantum-tabs active="tab3">
-            <button id="tab3" slot="tab">tab 3 label</button>
+            <button content="tab3" slot="tab">tab 3 label</button>
             <div id="tab3" slot="content">tab 3 content</div>
         </quantum-tabs>
     </body>
