add tab adapter

--- a/test/debug.html
+++ b/test/debug.html
@@ -4,11 +4,11 @@
         <script type="module" src="/test/debug.js"></script>
     </head>
     <body>
-        <quantum-tabs active="tab1">
+        <quantum-tabs active="tab2">
             <div id="tab1">tab 1 content</div>
             <div id="tab2">tab 2 content</div>
         </quantum-tabs>
-        <quantum-tabs active="tab3" toggle>
+        <quantum-tabs toggle>
             <div id="tab3">tab 3 content</div>
         </quantum-tabs>
     </body>
