start adding style

--- a/test/debug.html
+++ b/test/debug.html
@@ -4,40 +4,40 @@
         <script type="module" src="/test/debug.js"></script>
     </head>
     <body>
-        <h3>Default</h3>
-        <quantum-tabs active="tab2">
+        <p>Styled</p>
+        <quantum-tabs active="tab2" dock="top">
             <div id="tab1">tab 1 content</div>
             <div id="tab2">tab 2 content</div>
         </quantum-tabs>
-        <h3>Toggle</h3>
+        <p>Toggle</p>
         <quantum-tabs toggle>
             <div id="tab3">tab 3 content</div>
         </quantum-tabs>
-        <h3>Drag Lock</h3>
+        <p>Drag Lock</p>
         <quantum-tabs lock>
             <div id="tab4">tab 4 content</div>
         </quantum-tabs>
-        <h3>Drag Type</h3>
+        <p>Drag Type</p>
         <quantum-tabs type="test">
             <div id="tab5">tab 5 content</div>
             <div id="tab6">tab 6 content</div>
         </quantum-tabs>
-        <h3>Dock Top</h3>
+        <p>Dock Top</p>
         <quantum-tabs dock="top">
             <div id="tab7">tab 7 content</div>
             <div id="tab8">tab 8 content</div>
         </quantum-tabs>
-        <h3>Dock Left</h3>
+        <p>Dock Left</p>
         <quantum-tabs dock="left">
             <div id="tab9">tab 9 content</div>
             <div id="tab10">tab 10 content</div>
         </quantum-tabs>
-        <h3>Dock Right</h3>
+        <p>Dock Right</p>
         <quantum-tabs dock="right">
             <div id="tab11">tab 11 content</div>
             <div id="tab12">tab 12 content</div>
         </quantum-tabs>
-        <h3>Dock Bottom</h3>
+        <p>Dock Bottom</p>
         <quantum-tabs dock="bottom">
             <div id="tab13">tab 13 content</div>
             <div id="tab14">tab 14 content</div>
