add split tab functionality

--- a/test/debug.html
+++ b/test/debug.html
@@ -46,5 +46,7 @@
             <div id="tab20">tab 20 content</div>
             <div id="tab21">tab 21 content</div>
         </quantum-tabs>
+        <p>Split Tabs</p>
+        <div id="empty-div" style="height: 30px;"></div>
     </body>
 </html>
