add document load hack

--- a/test/debug.html
+++ b/test/debug.html
@@ -4,8 +4,8 @@
         <script type="module" src="/test/debug.js"></script>
     </head>
     <body>
-        <p>Dock Top</p>
-        <quantum-tabs dock="top">
+        <p>Dock Top Active</p>
+        <quantum-tabs dock="top" active="content1">
             <div content="content1" slot="tabs" draggable="true">tab 1</div>
             <div content="content2" slot="tabs" draggable="true">tab 2</div>
             <div id="content1">tab 1 content</div>
