add default support

--- a/test/debug.html
+++ b/test/debug.html
@@ -5,32 +5,32 @@
     </head>
     <body>
         <p>Dock Top Active</p>
-        <quantum-tabs dock="top" active="content1">
-            <div content="content1" slot="tabs" draggable="true">tab 1</div>
-            <div content="content2" slot="tabs" draggable="true">tab 2</div>
-            <div id="content1">tab 1 content</div>
-            <div id="content2">tab 2 content</div>
+        <quantum-tabs dock="top">
+            <div tab="content1" slot="tabs" draggable="true">tab 1</div>
+            <div tab="content2" slot="tabs" draggable="true">tab 2</div>
+            <div tab="content1">tab 1 content</div>
+            <div tab="content2">tab 2 content</div>
         </quantum-tabs>
         <p>Dock Left Toggle</p>
         <quantum-tabs dock="left" toggle>
-            <div content="content3" slot="tabs" draggable="true">tab 3</div>
-            <div content="content4" slot="tabs" draggable="true">tab 4</div>
-            <div id="content3">tab 3 content</div>
-            <div id="content4">tab 4 content</div>
+            <div tab="content3" slot="tabs" draggable="true">tab 3</div>
+            <div tab="content4" slot="tabs" draggable="true">tab 4</div>
+            <div tab="content3">tab 3 content</div>
+            <div tab="content4">tab 4 content</div>
         </quantum-tabs>
         <p>Dock Right Drag Lock</p>
         <quantum-tabs dock="right" lock>
-            <div content="content5" slot="tabs" draggable="true">tab 5</div>
-            <div content="content6" slot="tabs" draggable="true">tab 6</div>
-            <div id="content5">tab 5 content</div>
-            <div id="content6">tab 6 content</div>
+            <div tab="content5" slot="tabs" draggable="true">tab 5</div>
+            <div tab="content6" slot="tabs" draggable="true">tab 6</div>
+            <div tab="content5">tab 5 content</div>
+            <div tab="content6">tab 6 content</div>
         </quantum-tabs>
         <p>Dock Bottom Drag Type</p>
         <quantum-tabs dock="bottom" type="test">
-            <div content="content7" slot="tabs" draggable="true">tab 7</div>
-            <div content="content8" slot="tabs" draggable="true">tab 8</div>
-            <div id="content7">tab 7 content</div>
-            <div id="content8">tab 8 content</div>
+            <div tab="content7" slot="tabs" draggable="true">tab 7</div>
+            <div tab="content8" slot="tabs" draggable="true">tab 8</div>
+            <div tab="content7">tab 7 content</div>
+            <div tab="content8">tab 8 content</div>
         </quantum-tabs>
     </body>
 </html>
